# port-scanner

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
examples/: sample_output.json  scan_localhost.sh
scanner/: banner.py  cli.py  reporter.py  scanner.py  services.py  utils.py
tests/: test_banner.py  test_reporter.py  test_scanner.py  test_services.py
